Fixed: main menu was shifted right by eclipse logo

--- a/rap-layout-fixes.css
+++ b/rap-layout-fixes.css
@@ -12,6 +12,7 @@
 /* Fix horizontal position of the top-left Eclipse logo */
 div#logo {
   position: relative;
+  height: 91px;
   top: 10px;
 }
 
